# exoshow

./: .gitignore  LICENSE  README.md  exoplaneteu.py  pyproject.toml  run.py  solar_system.csv
exoshow/: axis.py  core.py  db.py  definitions.py  layer.py  one_axis.py
output/: 00info
