[tool.poetry]
name = "exoshow"
version = "0.0.0"
description = ""
authors = ["duckrojo <3063609+duckrojo@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.9.2"
pandas = "^2.2.3"
astropy = "^6.1.6"
numpy = "^2.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry-dynamic-versioning.substitution]
